RE #53: Fixed button padding in Safari.  Had to wrap main-content stuff in a main-content-column in order to add the split/size rules - needed a selector to wrap children.

--- a/src/components/button/styles.scss
+++ b/src/components/button/styles.scss
@@ -264,7 +264,7 @@ input[type="button"] {
 .btn-radius-circle {
   width: 2.125rem;
   height: 2.125rem;
-  padding: 0;
+  padding: .5rem;
   letter-spacing: 0;
   border-radius: $round;
   display: inline-flex;
