--- a/src/components/main-content/styles.scss
+++ b/src/components/main-content/styles.scss
@@ -37,7 +37,9 @@
 .main-content-column {
   display: flex;
   flex-direction: column;
-  flex: 1 1 100%;
+  flex: 1 1 auto;
+  min-height: 0;
+  width: 100%;
 }
 
 
