--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -63,6 +63,8 @@ $sidebar-actions-width:   360px;
     margin: 0;
     width: 100%;
     bottom: 0;
+    left: 0;
+    right: 0;
     border-left-width: 0;
     border-top-width: 1px;
     min-height: 50vh;
@@ -92,6 +94,7 @@ $sidebar-actions-width:   360px;
   position: absolute;
   top: -3.25rem;
   right: .5rem;
+  padding: .5rem;
   width: 2.5rem;
   height: 2.5rem;
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
