--- a/src/components/split-content/styles.scss
+++ b/src/components/split-content/styles.scss
@@ -6,6 +6,6 @@
   display: flex;
   flex-direction: row;
   flex: 1 1 auto;
-  height: 100%;
   min-height: 0;
+  width: 100%;
 }
